style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.row {
  width: 992px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 100px;
}

/* BLOCCO LEZIONI */
#lezioni .row>.left,
#lezioni .row>.right {
  width: 50%;
  float: left;
}

#lezioni .row img {
  /* per centrare orizzontalmente */
  display: block;
  margin-right: auto;
  margin-left: auto;
}

#lezioni {
  text-align: center;
}

/* BLOCCO STEPS */
#steps .row>.left,
#steps .row>.central,
#steps .row>.right {
  float: left;
  width: 33%;
}

#steps {
  text-align: center;
}

/* BLOCCO PERCHE */
#why {
  text-align: center;
}

#why .row>.first,
#why .row>.second,
#why .row>.third {
  width: 100%;
  margin-top: 80px;
}

#why .row img {
  background-color: #428bca;
  border-radius: 50%;
  padding: 30px
}

/* COMMON */
.row::after {
  content: '';
  display: table;
  clear: both;
}

.container.grey {
  background-color: #f9f9f9;
}

img {
  height: 200px;
}

.clear {
  clear: both;
}


/* RESPONSIVE MEDIA QUERY */
/* 420px breakpoint */
@media screen and (max-width: 419px) {
  .row {
    width: 100%;
    margin-top: 30px;
  }

  img {
  max-width: 100px;
  max-height: 100px;
  }

  hr {
    width: 80%;
    margin: 30px auto;
  }

  #lezioni .row img {
    height: auto;
  }

  #lezioni .row > .left,
  #lezioni .row > .right,
  #steps .row>.left,
  #steps .row>.central,
  #steps .row>.right {
    float: none;
    margin: 30px 10px;
    width: 90%;
  }

  #why img {
    height: auto;
  }

  #why .row>.first,
  #why .row>.second,
  #why .row>.third {
    margin-top: 40px;
  }
}

/* 420px to 767px breakpoint */
@media screen and (min-width: 420px) and (max-width: 767px) {
  .row {
    width: 100%;
    margin-top: 30px;
  }

  img {
  max-width: 150px;
  max-height: 150px;
  }

  hr {
    display: none;
  }

  #lezioni .row > .left,
  #lezioni .row > .right {
    width: 41%;
    margin: 40px 4%;
  }

  #lezioni .row img {
    max-width: 300px;
  }

  #lezioni {
    border-bottom: 2px solid gray;
  }

  #steps .row>.left,
  #steps .row>.central,
  #steps .row>.right {
    float: none;
    margin: 80px auto;
    width: 90%;
  }

  #steps.container,
  #why.container {
    width: 44%;
    margin: 2%;
    display: inline-block;
    vertical-align: top;
    background-color: #fff;
  }
}

/* 768px to 1023px breakpoint*/
@media screen and (min-width: 768px) and (max-width: 1023px) {
  .row {
    width: 100%;
    margin-top: 30px;
  }

  #lezioni .row > .left,
  #lezioni .row > .right {
    width: 44%;
    margin: 30px 3%;
  }

  #steps .row>.left,
  #steps .row>.central,
  #steps .row>.right {
    float: left;
    width: calc(88% / 3);
    margin: 40px 2%;
  }

  #why img {
    height: auto;
    max-width: 140px;
  }

  #why .row>.first,
  #why .row>.second,
  #why .row>.third {
    float: left;
    width: calc((88% / 3) - 4px);
    margin: 40px 2%;
  }

  #why .row>.third {
    margin-top: 40px;
  }

  hr {
    display: none;
  }
}

